make my profile prettier

--- a/profile/index.html
+++ b/profile/index.html
@@ -11,7 +11,7 @@
 <body>
   <div class="container">
     <div class="card">
-      <h1>Bonjour je m'appelle Mylène</h1>
+      <h1>Bonjour je m'appelle Mylène 👋🏽</h1>
       <img src="images/IMG_9974.jpg" alt="Mylène Desroses" width="100px" id="image-circle">
       <p>Passionnée par le digital, j'affectionne tout particulièrement la programmation et l'ui design.
         j'ai réalisé des études dans la communication mais la création de site internet est un domaine qui m'interesse
